CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(PNGTILEGEN)

ADD_DEFINITIONS( -O3 -Wall )

FIND_PACKAGE(PNG REQUIRED)
FIND_PACKAGE(JPEG REQUIRED)

INCLUDE_DIRECTORIES(${PNG_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${JPEG_INCLUDE_DIR})

ADD_EXECUTABLE(png_tilegen png_tilegen.c)

TARGET_LINK_LIBRARIES(png_tilegen ${PNG_LIBRARY} ${JPEG_LIBRARY})
